--- a/insta-image/index.html
+++ b/insta-image/index.html
@@ -157,7 +157,7 @@
                 <div class="col-lg-12 text-center image-gallery">
                     <h1>
                         My Insta-Images
-                        <a id="resetOption" href="http://localhost/instagram/">Reset</a>
+                        <a id="resetOption" href="http://tilakranjan.github.io/insta-image/">Reset</a>
                     </h1>
 
                     <div class="row">
@@ -242,8 +242,8 @@
                 $('#importInsta').click(function(){
                     console.log('import from insagram');
 
-                    var redirectUri = 'http://localhost/instagram/?from=insta'; // local
-                    // var redirectUri = 'http://localhost/instagram/?from=insta'; // web
+                    // var redirectUri = 'http://localhost/instagram/?from=insta'; // local
+                     var redirectUri = 'http://tilakranjan.github.io/insta-image/?from=insta'; // web
                     var cId = '6e870ce9fb734e48803daa97fa824b1b';
                     window.location.replace('https://api.instagram.com/oauth/authorize/?client_id='+cId+'&redirect_uri='+redirectUri+'&response_type=token');
                 });
