--- a/inst-image/index.html
+++ b/inst-image/index.html
@@ -243,7 +243,7 @@
                     console.log('import from insagram');
 
                     // var redirectUri = 'http://localhost/instagram/?from=insta'; // local
-                     var redirectUri = 'http://tilakranjan.github.io/insta-image/?from=insta'; // web
+                     var redirectUri = 'http://tilakranjan.github.io/inst-image/?from=insta'; // web
                     var cId = '6e870ce9fb734e48803daa97fa824b1b';
                     window.location.replace('https://api.instagram.com/oauth/authorize/?client_id='+cId+'&redirect_uri='+redirectUri+'&response_type=token');
                 });
