--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                                 <i class="fa fa-linkedin fa-fw"></i>
                             </a>
                         </li>
+                        <li>
+                            <a href="http://tilak.etrixtech.com/" target="_blank" class="btn btn-default btn-lg">
+                                <i class="fa fa-desktop fa-fw"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
