--- a/flightBooking/index.html
+++ b/flightBooking/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div id="ticketForm" class="main-agileinfo">
-		<h1 id="headingTitle">Form</h1>
+		<h1 id="headingTitle">Flight tickets</h1>
 		<div class="formDiv">
 			<div class="formElements switch-holder">
 				<div class="switch-field">
