link issue fixed

--- a/contextLoader/index.html
+++ b/contextLoader/index.html
@@ -13,7 +13,7 @@
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/contextLoader.css" rel="stylesheet">
+  <link href="css/contextLoader.min.css" rel="stylesheet">
 
   <style>
 
@@ -79,7 +79,7 @@
 
   <!-- Bootstrap Core JavaScript -->
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/contextLoader.js"></script>
+  <script src="js/contextLoader.min.js"></script>
 
   <script>
   $(document).ready(function() {
