--- a/contextLoader/index.html
+++ b/contextLoader/index.html
@@ -17,6 +17,11 @@
 
   <style>
 
+  body{
+    margin-top: 80px;
+    background: #eeee;
+  }
+
   #radioDiv{
     padding: 2%;
     text-align: center;
