contact up updated

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 								<div class="tilakr-feature tilakr-feature-sm animate-box"
 									data-animate-effect="fadeInLeft">
 									<div class="tilakr-icon">
-										<i class="icon-globe-outline"></i>
+										<i class="icon-mail"></i>
 									</div>
 									<div class="tilakr-text">
 										<p>tilak.r.mohanta@gmail.com</p>
@@ -509,12 +509,23 @@
 										<div class="tilakr-feature tilakr-feature-sm animate-box"
 											data-animate-effect="fadeInLeft">
 											<div class="tilakr-icon">
-												<i class="icon-phone"></i>
+												<i class="icon-whatsapp"></i>
 											</div>
 											<div class="tilakr-text">
-												<p><a href="tel://">+91 7381 039 044</a></p>
+												<p>+91 7381 039 044</p>
 											</div>
 										</div>
+
+										<div class="tilakr-feature tilakr-feature-sm animate-box"
+											data-animate-effect="fadeInLeft">
+											<div class="tilakr-icon">
+												<i class="icon-social-skype-outline"></i>
+											</div>
+											<div class="tilakr-text">
+												<p>tilak.ranjan99</p>
+											</div>
+										</div>
+
 									</div>
 
 								</div>
