--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</p>
 					<ul>
 						<li><a href="https://github.com/tilakranjan" target="blank"><i class="icon-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/techtilak/" target="blank"><i class="icon-linkedin2"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/hellotilak/" target="blank"><i class="icon-linkedin2"></i></a></li>
 					</ul>
 				</div>
 			</aside>
